--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "Russia"
-title                    : " / Site Title"
+locale                   : "en-US"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Du Kehao"
+name                     : &name "Your Name"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Russia"
-  employer         : "Red Brick University"
+  employer         : "RRI"
   uri              : # URL
   email            : "none@example.org" 
 
