--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  avatar           : "../images/个人照片.jpg"
+  name             : "Du Kehao"
+  pronouns         : # example: "he"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Russia"
   employer         : "RRI"
-  uri              : # URL
-  email            : "none@example.org" 
+  uri              : https://aiyuyulikai.github.io/
+  email            : "duhuhaizi@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
