--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/个人照片.jpg"
+  avatar           : "images/photo.png"
   name             : "Du Kehao"
   pronouns         : # example: "he"  
   bio              : "Short biography for the left-hand sidebar"
