--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "images/photo.png"
   name             : "Du Kehao"
   pronouns         : # example: "he"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Studing in BMSTU"
   location         : "Russia"
   employer         : "RRI"
   uri              : https://aiyuyulikai.github.io/
